--- a/package.json
+++ b/package.json
@@ -1,22 +1,28 @@
 {
   "name": "godmode-server",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-  "start": "node server.js",
-  "dev": "nodemon server.js"
-},
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
+    "start": "node server.js",
+    "dev": "nodemon server.js"
+  },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.490.0",
+    "adm-zip": "^0.5.9",
+    "bcryptjs": "^2.4.3",
+    "compression": "^1.7.4",
     "cors": "^2.8.5",
-    "dotenv": "^17.2.2",
-    "express": "^5.1.0",
-    "helmet": "^8.1.0",
+    "dotenv": "^16.6.1",
+    "express": "^4.21.2",
+    "express-rate-limit": "^6.11.2",
+    "get-port": "^7.1.0",
+    "helmet": "^6.2.0",
+    "jsonwebtoken": "^9.0.2",
+    "mime-types": "^2.1.35",
     "morgan": "^1.10.1",
-    "rate-limit": "^0.1.1"
+    "multer": "^1.4.5-lts.1",
+    "sanitize-filename": "^1.6.3",
+    "winston": "^3.8.2"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
