--- a/.env.example.txt
+++ b/.env.example.txt
@@ -6,9 +6,9 @@ NODE_ENV=development
 BASE_DOMAIN=gserverjr.duckdns.org
 
 # Secrets (generate strong random strings)
-UPLOAD_SECRET=cBbEVAKc0Dpy5NXo0RQ5OCmoyQiOHQLJgfLOnWwIubk=
-ADMIN_TOKEN=LnJtwFIx5az33zXjRw61kswN/awo0ecPpPbKjn48srQ=
-JWT_SECRET=etkax/c3JEnKKk6eMPqyUc38xh7GB6nAJEisYK4VhHU=
+UPLOAD_SECRET=sdm,sds.dmsldl
+ADMIN_TOKEN=kdklslklsdklsd
+JWT_SECRET=klk
 # Limits / rate limit
 MAX_UPLOAD_BYTES=52428800
 RATE_LIMIT_WINDOW_MS=60000
